@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=GNU Octave
+Comment=Scientific Computing using GNU Octave
+TryExec=%OCTAVE_PREFIX%/bin/octave
+Exec=%OCTAVE_PREFIX%/bin/octave
+Icon=%OCTAVE_IMAGEDIR%/octave-sombrero.png
+Terminal=true
+Type=Application
+Categories=Development; Science;
+StartupNotify=false
